--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
 	padding: 0;
-	width: 100%;
+	width: 1219px;
 	margin: 0 auto;
 	font-family: "Inter", Arial, sans-serif;
 	color: #ffffff;
