--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,9 @@
 @import url(../fonts/fonts.css);
 
 @import url(../blocks/page/page.css);
+
+@import url(../blocks/header/header.css);
+
+@import url(../blocks/header/__lang-links/__lang-links.css);
+
+@import url(../blocks/header/__text-line/__text-line.css);
