--- a/pages/index.css
+++ b/pages/index.css
@@ -13,3 +13,9 @@
 @import url(../blocks/lead/lead.css);
 
 @import url(../blocks/lead/__title/lead__title.css);
+
+@import url(../blocks/problem/problem.css);
+
+@import url(../blocks/problem/__title/problem__title.css);
+
+@import url(../blocks/problem/__text/problem__text.css);
