--- a/pages/index.css
+++ b/pages/index.css
@@ -19,3 +19,9 @@
 @import url(../blocks/problem/__title/problem__title.css);
 
 @import url(../blocks/problem/__text/problem__text.css);
+
+@import url(../blocks/lead-title/lead-title.css);
+
+@import url(../blocks/lead-title/__img/lead-title__img.css);
+
+@import url(../blocks/lead-title/__text/lead-title__text.css);
