--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,17 @@
 @import url(../blocks/intro/__title/intro__title.css);
 
 @import url(../blocks/intro/__text/intro__text.css);
+
+@import url(../blocks/team/team.css);
+
+@import url(../blocks/team/__title/team__title.css);
+
+@import url(../blocks/cards/cards.css);
+
+@import url(../blocks/cards/__item/cards__item.css);
+
+@import url(../blocks/cards/__img/cards__img.css);
+
+@import url(../blocks/cards/__title/cards__title.css);
+
+@import url(../blocks/cards/__description/cards__description.css);
