--- a/pages/index.css
+++ b/pages/index.css
@@ -51,3 +51,7 @@
 @import url(../blocks/cards/__title/cards__title.css);
 
 @import url(../blocks/cards/__description/cards__description.css);
+
+@import url(../blocks/footer/footer.css);
+
+@import url(../blocks/footer/__copyright/footer__copyright.css);
